<resources>
    <string name="app_name">Deventers</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="name">Name:-</string>
    <string name="address">Address:-</string>
    <string name="agree_that_you_are_a_wanker">Agree that you are a wanker?</string>
    <string name="signature">Signature:-</string>
    <string name="use_your_initials">Use your Initials</string>
    <string name="postcode">PostCode</string>
    <string name="enter_your_full_name">Enter your full Name</string>
    <string name="street_name_and_house_number">Street name and House number</string>
    <string name="postcodes">PostCode:-</string>
    <string name="submit">Submit</string>
    <string name="start">Start</string>
</resources>
